After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 776380 - Gross value of bills charged back instead of net value
Gross value of bills charged back instead of net value
Status: RESOLVED FIXED
Product: GnuCash
Classification: Other
Component: Business
2.6.15
Other Mac OS
: Normal normal
: ---
Assigned To: gnucash-core-maint
gnucash-core-maint
Depends on:
Blocks:
 
 
Reported: 2016-12-22 07:48 UTC by Christoph Rohland
Modified: 2018-06-29 23:52 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Simple test file. look at bill 000001 and invoice 000002 (3.65 KB, application/x-gzip)
2016-12-22 07:48 UTC, Christoph Rohland
Details
Bill 000001 (66.77 KB, image/png)
2016-12-22 07:49 UTC, Christoph Rohland
Details
Invoice 000002 (65.13 KB, image/png)
2016-12-22 07:49 UTC, Christoph Rohland
Details
Printed invoice 000002 (66.27 KB, image/png)
2016-12-22 07:50 UTC, Christoph Rohland
Details

Description Christoph Rohland 2016-12-22 07:48:16 UTC
Created attachment 342372 [details]
Simple test file. look at bill 000001 and invoice 000002

When including an expense to a bill with tax included it will nicely calculate the tax and net price. But when charging back to an invoice it will use the price I entered (including tax) to the invoice instead of the net price without tax.

This is only an annoyance and source of error when the tax rate is the same on bills and invoices since I can mark in the invoice that the tax is included. But it does not work when the tax rate is different. 

The chargeback should always be based on the net price without taxes.

Attached is a test file and the screenshots of the bill, invoice and printed invoice
Comment 1 Christoph Rohland 2016-12-22 07:49:19 UTC
Created attachment 342373 [details]
Bill 000001
Comment 2 Christoph Rohland 2016-12-22 07:49:58 UTC
Created attachment 342374 [details]
Invoice 000002
Comment 3 Christoph Rohland 2016-12-22 07:50:36 UTC
Created attachment 342375 [details]
Printed invoice 000002
Comment 4 Christoph Rohland 2017-03-09 14:12:08 UTC
Created pull request https://github.com/Gnucash/gnucash/pull/131 to fix this.
Comment 5 Geert Janssens 2017-03-11 12:32:30 UTC
Thanks for reporting this bug and even more thanks for taking the
time to provide a fix as well !

I have committed it to our stable branch, so the fix will appear
in gnucash 2.6.16 to be released soon.
Comment 6 John Ralls 2018-06-29 23:52:48 UTC
GnuCash bug tracking has moved to a new Bugzilla host. This bug has been copied to https://bugs.gnucash.org/show_bug.cgi?id=776380. Please update any external references or bookmarks.